# api-examples

./: .gitattributes  .gitignore  .lycheeignore  .pre-commit-config.yaml  Colab_Entry_Gateway.ipynb  MANIFEST.in  README.ipynb  README.md  api_interoperability_showcase.html  config.yml  create_and_submit_job.html  create_material.html  cypress.config.ts  get-file-from-job.html  get_materials_by_formula.html  get_workflows.html  import_materials_from_materialsproject.html  import_materials_from_poscar.html  index.html  mat3ra_api_examples-0.1.dev1+g03efa43-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+g2d074bd-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+g4d0dde0-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+g6eecd29d2-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+gb67f531-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+gbff9dd7da-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+gc24498978-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+gc41b0b8-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+gd196380-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+gd925f84-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+gf2d827c28-py3-none-any.whl  mat3ra_api_examples-0.1.dev1+gfbf11da-py3-none-any.whl  mat3ra_notebooks_utils-0.1.dev1+g13cb98691-py3-none-any.whl  mat3ra_notebooks_utils-0.1.dev1+g1c38b9566-py3-none-any.whl  mat3ra_notebooks_utils-0.1.dev1+g1e019a2ab-py3-none-any.whl  mat3ra_notebooks_utils-0.1.dev1+g51c438ebc-py3-none-any.whl  mat3ra_notebooks_utils-0.1.dev1+gd4030f89e-py3-none-any.whl  mat3ra_notebooks_utils-0.1.dev1+gfd1a09778-py3-none-any.whl  mkdocs.yml  ml-train-model-predict-properties.html  package.json  (+8 more)
.github/workflows/: build-wheel.yml  check_links.yml  cicd.yml  zip_release.yml
.venv-3.10/: pyvenv.cfg
cypress/: tsconfig.json
cypress/support/: commands.ts  e2e.ts  notebook-tester.ts
docs/: 404.html  api_interoperability_showcase.html  create_and_submit_job.html  create_material.html  get-file-from-job.html  get_authentication_params.html  get_materials_by_formula.html  get_workflows.html  import_materials_from_materialsproject.html  import_materials_from_poscar.html  index.html  ml-train-model-predict-properties.html  run-simulations-and-extract-properties.html
docs/search/: search_index.json
exabyte_api_examples_utils/: colab.py  enum.py  generic.py  initialize_settings.py
exabyte_api_examples_utils/assets/: README.md  example-requirements.txt
examples/: .gitattributes  Colab_Entry_Gateway.ipynb  colab_setup_google_cloud_bucket.ipynb  config.py  create_and_submit_job.py  create_material.py  get_auth_params.py  get_authentication_params.ipynb  get_materials.py  get_materials_by_formula.py  import_materials_from_materialsproject.py  jupyter_notebook_config.py  material_utils.py  run-dft-workflow.py  run-ml-workflow.py  settings.ipynb  settings.json  settings.py  setup.py  utils.ipynb  utils.py  vae_data.pkl
examples/api/: .gitattributes  get_authentication_params.ipynb  get_authentication_params.py  settings.ipynb  test.ipynb
examples/assets/: README.md  Si.pz-vbc.UPF  bash_workflow_template.json  bittersweet_xgboost.pkl  curated-solubility-dataset.csv  deepchem_smiles_vocab.txt  logP_dataset.csv  mp-978534.poscar  smiles_markov_model.pkl
examples/full_reproductions/: band_gaps_for_interface_bilayer_twisted_molybdenum_disulfide.ipynb  band_gaps_wf.ipynb  band_structure_for_interface_bilayer_twisted_molybdenum_disulfide.ipynb  bg_for_interface_bilayer_twisted_molybdenum_disulfide.ipynb
examples/job/: .gitattributes  SmilesMarkov.ipynb  SmilesMarkov.py  adsorption-study.ipynb  adsorption-study.py  create_and_submit_job.ipynb  create_and_submit_job.py  dft-band-gaps-calculation.ipynb  dft-band-gaps-calculation.py  gamma_alumina_digne_et_al.poscar  generate-al2o3-slab-structures.ipynb  generate-al2o3-slab-structures.py  generate-slabs-al2o3.ipynb  generate-slabs-al2o3.py  get-file-from-job.ipynb  get-file-from-job.py  get_file_from_job.ipynb  ml-band-gaps-prediction.ipynb  ml-band-gaps-prediction.py  ml-train-model-predict-properties.ipynb  ml-train-model-predict-properties.py  ml_train_model_predict_properties.ipynb  predict_with_machine_learning.ipynb  predict_with_machine_learning.py  run-dft-workflow.ipynb  run-dft-workflow.py  run-ml-workflow.ipynb  run-simulations-and-extract-properties.ipynb  run-simulations-and-extract-properties.py  settings.py  train-vae.ipynb  train-vae.py  utils.py  wulff-construction-surface-energy-study-cu.ipynb  wulff-construction-surface-energy-study-cu.py
examples/machine_learning/: Classification_Bitter.ipynb  Classification_Bitter.py  Classification_Tox.py  Classification_of_Bitterness_XGBoost.ipynb  Classification_of_Bitterness_XGBoost.py  Parallel_LogP_bayes.ipynb  Parallel_LogP_bayes.py  Perovskite_Processing.ipynb  Perovskite_Processing.py  neural_network_train.ipynb  neural_network_train.py
examples/material/: .gitattributes  api_interoperability_showcase.ipynb  api_interoperability_showcase.py  create_material.ipynb  create_material.py  get_materials.ipynb  get_materials_by_formula.ipynb  get_materials_by_formula.py  import_materials_from_materialsproject.ipynb  import_materials_from_materialsproject.py  import_materials_from_poscar.ipynb  import_materials_from_poscar.py  mp-978534.poscar  upload_materials_from_file_poscar.ipynb  upload_materials_from_file_poscar.py
examples/reproducing_publications/: band_gaps_for_interface_bilayer_twisted_molybdenum_disulfide.ipynb  band_structure_for_interface_bilayer_twisted_molybdenum_disulfide.ipynb
mcp_server/: .env.example  AGENTS.md  README.md  code_server.py  intent.py  pyproject.toml  server.py
scripts/: change-branch-in-urls.sh  env.sh  fast_interface_matching_demo.py  render-notebooks.sh  test_fast_match_graphene_ni111.py
tmp/: working_wave.ipynb
utils/: api.py  auth.py  colab.py  equation_of_state.py  fast_interface_builder.py  generic.py  interface_matching.py  interrupts.py  io.py  job_properties.py  jupyterlite.py  material.py  notebook.py  patch_mace.py  patch_torch.py  plot.py  polar_vbo.py  settings.py  torch_pyodide.py  visualize.py
(+419 files in other folders)
