[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mat3ra-api-examples"
version = "0.1.0"
description = "Mat3ra API Examples"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "ase==3.21.1",
  "exabyte-api-client==2023.6.13.post0",
  "matplotlib==3.4.1",
  "pandas==1.5.3",
  "pymatgen==2023.5.31",
]

[project.optional-dependencies]
jupyter = [
  "jupyterlab==3.0.17",
  "nbconvert==6.0.7",
  "nbstripout==0.6.1",
]
dev = [
  "black[jupyter]==23.3.0",
  "isort==5.12.0",
  "mypy==1.4.1",
  "pre-commit==3.3.3",
  "ruff==0.0.275",
  "types-requests==2.31.0.1",
  "types-tabulate==0.9.0.2",
]

[project.urls]
homepage = "https://exabyte-io.github.io/api-examples"
documentation = "https://exabyte-io.github.io/api-examples"
repository = "https://github.com/Exabyte-io/api-examples"

[project.scripts]
notebook-path = "utils.notebook:print_notebook_path"

[tool.setuptools.package-data]
utils = ["settings.json"]


[tool.black]
line-length = 120
target-version = ['py38']
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
(
    examples\/.*\/.*\.py
  | other\/.*\/.*\.(py|ipynb)
)
'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "examples/**/*.py",
  "other/**/*.py",
]
line-length = 120
target-version = "py38"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
