[project]
name = "mat3ra-api-examples"
dynamic = ["version"]
description = "Mat3ra API Examples"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "ase>=3.21.1",
  "exabyte-api-client>=2023.6.13.post0",
  "matplotlib>=3.4.1",
  "pandas>=1.5.3",
  "pymatgen==2024.4.13",
  "mat3ra-made>=2024.6.11.post0",
  "mat3ra-utils>=2024.6.11.post0",
]

[project.optional-dependencies]
# Install all above dependencies in colab
colab = ["mat3ra-api-examples"]
jupyterlab = [
  "jupyterlab>=3.0.17",
  "nbconvert>=6.0.7",
]
# Install colab + jupyterlab on localhost
localhost = ["mat3ra-api-examples[jupyterlab]"]
dev = [
  "pre-commit>=3.3.3",
  "pip-tools>=6.13.0",
]
docs = [
  "mkdocs>=1.4.3",
  "mkdocs-material>=9.1.17",
  "mkdocs-same-dir>=0.1.2",
  "mkdocs-exclude>=1.0.2",
  "mkdocs-jupyter>=0.24.1",
  "nbstripout>=0.6.1",
]

[project.urls]
homepage = "https://exabyte-io.github.io/api-examples"
documentation = "https://exabyte-io.github.io/api-examples"
repository = "https://github.com/Exabyte-io/api-examples"

[project.scripts]
notebook-path = "utils.notebook:print_notebook_path"

[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=6.2", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
git_describe_command = "git describe --tags --long"

[tool.setuptools.packages.find]
include = ["utils"]

[tool.setuptools.package-data]
utils = [
  "settings.json",
  "web/renderjson.*",
]


[tool.black]
line-length = 120
target-version = ['py38']
# 'extend-exclude' excludes files or directories in addition to the defaults
extend-exclude = '''
(
    examples\/.*\/.*\.py
  | other\/.*\/.*\.(py|ipynb)
)
'''

[tool.ruff]
# Exclude a variety of commonly ignored directories.
extend-exclude = [
  "examples/**/*.py",
  "other/**/*.py",
]
line-length = 120
target-version = "py38"

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true
